fix overflow issue with large tab content

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   width: 100vw;
   height: calc(100vh - 15rem);
   border-collapse: collapse;
+  overflow-y: auto;
 }
 
 #track #time {
